# online-theatre-profiles

./: .env.example  .gitignore  README.md  compose.dev.yaml  compose.lint.yaml  compose.tests.yaml  compose.yaml  run_lint.sh  run_server.sh  run_tests.sh
.github/workflows/: ci.yaml
compose/auth/: Dockerfile  alembic.ini  pyproject.toml
compose/auth/auth/: main.py
compose/auth/auth/alembic/: env.py
compose/auth/auth/alembic/versions/: 7741ef2bb6cc_initial.py  7f83b7a43830_partition_login_history.py  86397c34b138_initial.py
compose/auth/auth/commands/: create_superuser.py
compose/auth/auth/core/: config.py
compose/auth/auth/db/: __init__.py  redis.py  sqlalchemy.py
compose/auth/auth/models/: schemas.py  sqlalchemy.py
compose/auth/auth/services/base/: exceptions.py
compose/auth/auth/services/cache/: __init__.py
compose/auth/auth/services/extended_users/: __init__.py  models.py  repository.py  service.py
compose/auth/auth/services/jwt/: __init__.py  jwt.py  service.py
compose/auth/auth/services/pagination/: __init__.py  models.py  service.py
compose/auth/auth/services/permissions/: __init__.py  exceptions.py  models.py  repository.py  service.py
compose/auth/auth/services/roles/: __init__.py  exceptions.py  models.py  repository.py  service.py
compose/auth/auth/services/users/: __init__.py  exceptions.py  jwt.py  manager.py  models.py  password.py  service.py
compose/auth/commands/: fastapi.sh  gunicorn.sh  init.sh  mypy.sh  ruff.sh
compose/auth/scripts/: cli.py
compose/etl/: .dockerignore  Dockerfile  pyproject.toml
compose/etl/commands/: mypy.sh  ruff.sh  transfer_data.sh
compose/etl/etl/: settings.py  utils.py
compose/etl/etl/commands/: transfer_data.py
compose/etl/etl/extract/: __init__.py  extractors.py  parsers.py  query.py
compose/etl/etl/load/: __init__.py  loaders.py
compose/etl/etl/pipelines/: __init__.py  pipelines.py
compose/etl/etl/state/: __init__.py  state.py  storage.py
compose/etl/etl/transform/: __init__.py  transformers.py
compose/etl/etl/transform/models/: __init__.py  base.py
compose/etl/schema/: films.json  genres.json  persons.json
compose/profiles/: Dockerfile  alembic.ini  pyproject.toml
compose/profiles-admin/: Dockerfile  pyproject.toml
compose/profiles-admin/commands/: gunicorn.sh  init.sh  mypy.sh  ruff.sh  runserver.sh
compose/profiles-admin/config/: settings.py  urls.py
compose/profiles-admin/profiles_admin/: admin.py  apps.py  models.py
compose/profiles-admin/profiles_admin/migrations/: 0001_initial.py
compose/profiles-admin/profiles_admin/services/auth/: __init__.py  backend.py  client.py  config.py  schemas.py  service.py  tokens.py
compose/profiles-admin/profiles_admin/services/http/: __init__.py  client.py
compose/profiles/commands/: fastapi.sh  gunicorn.sh  init.sh  mypy.sh  ruff.sh
compose/profiles/profiles/: main.py
compose/profiles/profiles/alembic/: env.py
compose/profiles/profiles/alembic/versions/: 05b7b689bd63_reviews.py  0f26da2f9e38_ratings.py  82154ccf81ea_.py  b76e44225107_favorites.py  df903f750dd2_initial.py
compose/profiles/profiles/core/: __init__.py  config.py
compose/profiles/profiles/db/: sqlalchemy.py
compose/profiles/profiles/dependencies/: httpx.py
compose/profiles/profiles/models/: schemas.py  sqlalchemy.py
compose/profiles/profiles/services/auth/: __init__.py
compose/profiles/profiles/services/base/: __init__.py
compose/profiles/profiles/services/common/: __init__.py  exceptions.py  models.py
compose/profiles/profiles/services/cryptography/: __init__.py  encryption.py  hashing.py  service.py
compose/profiles/profiles/services/favorites/: __init__.py  exceptions.py  models.py  repository.py  service.py
compose/profiles/profiles/services/pagination/: __init__.py  models.py  paginator.py  service.py
compose/profiles/profiles/services/profiles/: __init__.py  exceptions.py  models.py  repository.py  service.py
compose/profiles/profiles/services/ratings/: __init__.py  exceptions.py  models.py  repository.py  service.py
compose/profiles/profiles/services/reviews/: __init__.py  exceptions.py  models.py  repository.py  service.py
src/: Dockerfile  pyproject.toml
src/commands/: fastapi.sh  gunicorn.sh  mypy.sh  ruff.sh
src/movies/: main.py
src/movies/api/v1/dependencies/: __init__.py  page.py
src/movies/api/v1/endpoints/: films.py  genres.py  persons.py
src/movies/api/v1/models/: __init__.py  base.py  films.py  genres.py  persons.py
src/movies/core/: config.py
src/movies/db/: __init__.py  elastic.py
src/movies/dependencies/: __init__.py
src/movies/models/: __init__.py  auth.py  film.py  genre.py  person.py
src/movies/services/: __init__.py  film.py  genre.py  person.py
src/movies/services/auth/: __init__.py  client.py  token.py  user.py
src/movies/services/auth/current/: __init__.py  client.py  models.py  service.py  token.py  user.py
src/movies/services/cache/: __init__.py  parameterized.py
src/movies/services/cache/backends/: __init__.py  dependencies.py
src/movies/services/http/: client.py
src/movies/services/profiles/: __init__.py  client.py  models.py  service.py
src/movies/services/search/: __init__.py  service.py
src/movies/services/search/backends/: __init__.py  dependencies.py
tests/: Dockerfile  pyproject.toml
tests/commands/: mypy.sh  pytest.sh  ruff.sh
tests/tests/: conftest.py
tests/tests/functional/: settings.py
tests/tests/functional/fixtures/: auth.py  common.py  fixture_aiohttp.py  fixture_auth_postgresql.py  fixture_es.py  fixture_rate_limiter.py  fixture_redis.py  fixture_roles.py  redis.py
tests/tests/functional/src/: test_elasticsearch.py  test_redis.py
tests/tests/functional/src/auth/: test_auth.py  test_login_history.py  test_oauth.py  test_permission.py  test_rate_limiter.py  test_role_crud.py
tests/tests/functional/src/movies/: test_films.py  test_openapi.py  test_search.py
tests/tests/functional/utils/: redis.py
tests/tests/functional/utils/auth/: role_models.py  sqlalchemy.py
tests/tests/functional/utils/elasticsearch/: __init__.py  indices.py
(+122 files in other folders)
