[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

backoff = "2.2.1"
elasticsearch = { version = "8.16.0", extras = ["async"] }
fastapi = { version = "0.115.6", extras = ["standard"] }
httpx = "0.28.1"
opentelemetry-api = "1.29.0"
opentelemetry-exporter-otlp-proto-http = "1.29.0"
opentelemetry-instrumentation = "0.50b0"
opentelemetry-instrumentation-fastapi = "0.50b0"
opentelemetry-propagator-jaeger = "1.29.0"
opentelemetry-sdk = "1.29.0"
pydantic = "2.10.3"
pydantic-settings = "2.6.1"
redis = { version = "5.2.1", extras = ["hiredis"] }
sentry-sdk = { version = "^2.22.0", extras = ["fastapi"] }
uvicorn-worker = "0.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "1.0.0"
mypy = "1.15.0"
ruff = "0.9.9"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
