[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

backoff = "^2.2.1"
elasticsearch = { version = "^9.0.1", extras = ["async"] }
fastapi = { version = "^0.115.12", extras = ["standard"] }
httpx = "^0.28.1"
opentelemetry-api = "^1.33.1"
opentelemetry-exporter-otlp-proto-http = "^1.33.1"
opentelemetry-instrumentation = "^0.54b1"
opentelemetry-instrumentation-fastapi = "^0.54b1"
opentelemetry-propagator-jaeger = "^1.33.1"
opentelemetry-sdk = "^1.33.1"
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
redis = { version = "^6.2.0", extras = ["hiredis"] }
uvicorn-worker = "^0.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "^1.1.0"
mypy = "^1.16.0"
ruff = "^0.11.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
