[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

aiohttp = { version = "^3.12.6", extras = ["speedups"] }
asyncpg = "^0.30.0"
elasticsearch = { version = "^9.0.1", extras = ["async"] }
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
redis = { version = "^6.2.0", extras = ["hiredis"] }
SQLAlchemy = { version = "^2.0.41", extras = ["asyncio"] }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "^1.1.0"
mypy = "^1.16.0"
ruff = "^0.11.13"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:enable_cleanup_closed ignored:DeprecationWarning',
]
asyncio_default_fixture_loop_scope = "session"
