[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

aiohttp = { version = "^3.13.3", extras = ["speedups"] }
asyncpg = "^0.31.0"
elasticsearch = { version = "^9.3.0", extras = ["async"] }
pydantic = "^2.12.5"
pydantic-settings = "^2.13.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
redis = { version = "^7.2.0", extras = ["hiredis"] }
SQLAlchemy = { version = "^2.0.46", extras = ["asyncio"] }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "^1.1.0"
mypy = "^1.19.1"
ruff = "^0.15.1"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[tool.mypy]
python_version = "3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:enable_cleanup_closed ignored:DeprecationWarning',
]
asyncio_default_fixture_loop_scope = "session"
