[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

alembic = "1.14.1"
asyncpg = "0.30.0"
backoff = "2.2.1"
fastapi = { version = "0.115.6", extras = ["standard"] }
fastapi-limiter = "0.1.6"
httpx-oauth = "0.16.1"
opentelemetry-api = "1.29.0"
opentelemetry-exporter-otlp-proto-http = "1.29.0"
opentelemetry-instrumentation = "0.50b0"
opentelemetry-instrumentation-fastapi = "0.50b0"
opentelemetry-propagator-jaeger = "1.29.0"
opentelemetry-sdk = "1.29.0"
pwdlib = { version = "0.2.1", extras = ["argon2", "bcrypt"] }
pydantic = { version = "2.10.5", extras = ["email"] }
pydantic-settings = "2.7.1"
PyJWT = { version = "2.10.1", extras = ["crypto"] }
redis = { version = "5.2.1", extras = ["hiredis"] }
SQLAlchemy = { version = "2.0.37", extras = ["asyncio"] }
typer = "0.15.1"
uvicorn-worker = "0.2.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.22.0"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "1.0.0"
mypy = "1.15.0"
ruff = "0.9.9"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
