[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

alembic = "^1.18.4"
asyncpg = "^0.31.0"
backoff = "^2.2.1"
fastapi = { version = "^0.129.0", extras = ["standard"] }
fastapi-limiter = "^0.1.6"
httpx-oauth = "^0.16.1"
opentelemetry-api = "^1.39.1"
opentelemetry-exporter-otlp-proto-http = "^1.39.1"
opentelemetry-instrumentation = "^0.60b1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-propagator-jaeger = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
pwdlib = { version = "^0.3.0", extras = ["argon2", "bcrypt"] }
pydantic = { version = "^2.12.5", extras = ["email"] }
pydantic-settings = "^2.13.0"
PyJWT = { version = "^2.11.0", extras = ["crypto"] }
redis = { version = "^7.2.0", extras = ["hiredis"] }
SQLAlchemy = { version = "^2.0.46", extras = ["asyncio"] }
typer = "^0.24.0"
uvicorn-worker = "^0.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "^1.1.0"
mypy = "^1.19.1"
ruff = "^0.15.1"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[tool.mypy]
python_version = "3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
