[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

backoff = "^2.2.1"
elasticsearch = "^9.0.1"
psycopg = { version = "^3.2.9", extras = ["binary"] }
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "^1.1.0"
mypy = "^1.16.0"
ruff = "^0.11.13"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
