[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

backoff = "^2.2.1"
elasticsearch = "^9.3.0"
psycopg = { version = "^3.3.3", extras = ["binary"] }
pydantic = "^2.12.5"
pydantic-settings = "^2.13.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "^1.1.0"
mypy = "^1.19.1"
ruff = "^0.15.1"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[tool.mypy]
python_version = "3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
