[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

Django = "^5.2.11"
gunicorn = "^25.1.0"
httpx = "^0.28.1"
psycopg = { version = "^3.3.3", extras = ["binary"] }
pydantic = { version = "^2.12.5", extras = ["email"] }
python-dotenv = "^1.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "^1.1.0"
mypy = "^1.19.1"
ruff = "^0.15.1"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[tool.mypy]
python_version = "3.13"
disable_error_code = [
    "import-untyped",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
