[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

alembic = "1.16.1"
asyncpg = "0.30.0"
fastapi = { version = "0.115.12", extras = ["standard"] }
pydantic = "2.10.5"
pydantic-settings = "2.7.1"
SQLAlchemy = { version = "2.0.41", extras = ["asyncio"] }
uvicorn-worker = "0.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "1.0.0"
mypy = "1.15.0"
ruff = "0.9.9"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
