[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

alembic = "1.16.1"
asyncpg = "0.30.0"
fastapi = { version = "0.115.12", extras = ["standard"] }
opentelemetry-api = "1.33.1"
opentelemetry-exporter-otlp-proto-http = "1.33.1"
opentelemetry-instrumentation = "0.54b1"
opentelemetry-instrumentation-fastapi = "0.54b1"
opentelemetry-propagator-jaeger = "1.33.1"
opentelemetry-sdk = "1.33.1"
pydantic = "2.10.5"
pydantic-settings = "2.7.1"
SQLAlchemy = { version = "2.0.41", extras = ["asyncio"] }
uvicorn-worker = "0.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "1.0.0"
mypy = "1.15.0"
ruff = "0.9.9"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
