[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

alembic = "^1.16.1"
asyncpg = "^0.30.0"
cryptography = "^45.0.4"
fastapi = { version = "^0.115.12", extras = ["standard"] }
httpx = "^0.28.1"
opentelemetry-api = "^1.33.1"
opentelemetry-exporter-otlp-proto-http = "^1.33.1"
opentelemetry-instrumentation = "^0.54b1"
opentelemetry-instrumentation-fastapi = "^0.54b1"
opentelemetry-propagator-jaeger = "^1.33.1"
opentelemetry-sdk = "^1.33.1"
pydantic = { version = "^2.11.7", extras = ["email"] }
pydantic-settings = "^2.9.1"
SQLAlchemy = { version = "^2.0.41", extras = ["asyncio"] }
uvicorn-worker = "^0.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ciqar = "^1.1.0"
mypy = "^1.16.0"
ruff = "^0.11.13"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
]

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
